--- a/neovide/config.toml
+++ b/neovide/config.toml
@@ -9,6 +9,6 @@ title-hidden = true
 # normal = ["Mononoki Nerd Font Mono"]
 # normal = ["Cousine Nerd Font Mono"]
 # normal = ["SpaceMono Nerd Font Mono"]
-# normal = ["Noto Sans Mono"]
-normal = ["GeistMono Nerd Font Mono"]
+normal = ["Noto Sans Mono"]
+# normal = ["GeistMono Nerd Font Mono"]
 size = 10.5
